--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,11 +3,12 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      nodejs: 14
+      nodejs: current
    
     commands:
         # install npm
         - npm install
+        - yum install -y nodejs
        
   build:
     commands:
